Deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simplecompuation-service
  namespace: default
spec:
  selector:
    k8s-app: simplecompuation-service-app
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
