Deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simplecompuation-service-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
        - simplecompuation-service.test.com
      secretName: simplecompuation-service-tls
  rules:
    rules:
      - host: simplecompuation-service.test.com
        http:
          paths:
            - backend:
                serviceName: simplecompuation-service
                servicePort: grpc
